--- a/ngci-bootstrap-webui/src/main/resources/static/testnamedjob.html
+++ b/ngci-bootstrap-webui/src/main/resources/static/testnamedjob.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="css/bootstrap-3.3.7.css">
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/bootstrap-3.3.7.min.js"></script>
+</head>
 <body>
 
     <h2>Execute test job</h2>
