--- a/ngci-bootstrap-webui/src/main/resources/static/bootstrap/testnamedjob.html
+++ b/ngci-bootstrap-webui/src/main/resources/static/bootstrap/testnamedjob.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="css/bootstrap-3.3.7.css">
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/bootstrap-3.3.7.min.js"></script>
+  <link rel="stylesheet" href="/css/bootstrap-3.3.7.css">
+  <script src="/js/jquery-3.3.1.min.js"></script>
+  <script src="/js/bootstrap-3.3.7.min.js"></script>
 </head>
 <body>
 
