adding path to install esxi script

--- a/ngci-bootstrap-webui/src/main/resources/static/installesxi.html
+++ b/ngci-bootstrap-webui/src/main/resources/static/installesxi.html
@@ -10,7 +10,7 @@
     <h2 align="center">Install ESXi</h2>
 
     <form action='./startjob' method='post'>
-		<input name="job" type="text" value="install_esxi_job.sh" hidden>
+		<input name="job" type="text" value="/root/install_esxi_job.sh" hidden>
 		<table width="50%" cellpadding="5" cellspacing="5" align="center">
         <tr>
 			<td>ESXi version</td>
