--- a/ngci-bootstrap-webui/src/main/resources/static/bootstrap/installesxi.html
+++ b/ngci-bootstrap-webui/src/main/resources/static/bootstrap/installesxi.html
@@ -74,7 +74,7 @@
 			<td><input type="text" name="esxi_dns_search" value=""></td>
 		</tr>
 		<tr>
-			<td><input type="checkbox" name="esxi_accepteula" checked disabled>&nbsp;I accept EULA</td>
+			<td><input type="checkbox" name="esxi_accepteula" checked>&nbsp;I accept EULA</td>
 			<td><input type='submit' value='Install'></td>
 		</tr>
 		</table>
